--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: install dependencies
+      run: npm i
     - name: fetch data
       run: node fetchData.mjs
     - run: npm run build --if-present
