--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pretty-quick": "pretty-quick --bail"
+    "pretty-quick": "pretty-quick --check"
   },
   "eslintConfig": {
     "extends": [
